--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 }
 
-/* Configurações Gerais para parte do Corpo/Body */
+/* Configurações Gerais para parte do Body/Corpo */
 body {
 	display: flex;
 	flex-wrap: wrap;
