--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -10,16 +10,18 @@
 /* Configurações Gerais para parte do Body/Corpo */
 body {
 	margin: 3px;
-	background-color: #fff;
+	background-color: #E4E6D9;
 	display: flex;
 	flex: 1 1 100vw;
 	flex-wrap: wrap;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 header,
 nav,
 main,
-aside {
+aside,
+article {
 	margin: 3px;
 	background: #8AA98A;
 	display: flex;
@@ -38,6 +40,7 @@ header #logo {
 	color: white;
 	text-transform: uppercase;
 	text-align: center;
+	font-size: 20px;
 	display: flex;
 	flex: 0 1 200px;
 	justify-content: center;
@@ -67,6 +70,7 @@ nav {
 	flex: 1 1 100%;
 	justify-content: center;
 	align-items: center;
+	color: #fff;
 }
 
 nav a {
@@ -78,6 +82,21 @@ nav a {
 /* Configurações Gerais para parte do Main/Principal */
 main {
 	flex: 20 1 500px;
+	text-align: center;
+	color: #253529;
+	
+}
+
+h2{
+	text-transform: uppercase;
+	margin: 1%;
+	font-size: 28px;
+}
+
+p{
+	padding: 15px;
+	color: #fff;
+	font-size: 22px;
 }
 
 
@@ -95,6 +114,7 @@ aside {
 .foto img{
 	width: 100%;
 	display: block;
+	border: solid 5px #fff ;
 }
 
 .descricao{
@@ -102,11 +122,11 @@ aside {
 }
 
 .foto:target{
-	position: fixed;
+
 	padding: 5px;
-	width: 50%;
+	width:20%;
 	top: 15px;
-	left: 35%;
+	right: 15%;
 	border: solid 1px #333;
 	border-radius: 5px;
 	box-shadow: 0 0 25px 10px #000;
@@ -118,6 +138,19 @@ aside {
 	text-align: center;
 	color: #E4E6D9;
 }
+
+
+/* Configurações Gerais para parte do Article/Parceiros */
+article {
+	flex: 1 1 100vw;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	color: #253529;
+	text-transform: uppercase;
+	font-size: 25px;
+}
+
 
 
 /* Configurações Gerais para parte do Footer/Rodapé */
@@ -236,7 +269,6 @@ a {
 		height: 75px;
 	}
 
-
 	nav {
 		width: 100vw;
 		height: 100vh;
@@ -249,6 +281,7 @@ a {
 		display: none;
 		opacity: 0;
 		transition: 0.3s;
+		color: #000;
 	}
 
 	nav a {
