--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+:root{
+    --background: #E4E6D9;
+    --verde-complementar: #8AA98A;
+    --font-color-texto: white;
+    --font-color-titulo: #253529;
+    --branco-secundário: #dfe4da ;
+	--background-footer: #253529;
+}
+	
+	
 /* Propriedade aplicável em toda página */
 * {
 	
@@ -10,12 +20,13 @@
 /* Configurações Gerais para parte do Body/Corpo */
 body {
 	margin: 3px;
-	background-color: #E4E6D9;
+	background-color: var(--background);
 	display: flex;
 	flex: 1 1 100vw;
 	flex-wrap: wrap;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 
 header,
 nav,
@@ -23,7 +34,7 @@ main,
 aside,
 article {
 	margin: 3px;
-	background: #8AA98A;
+	background: var(--verde-complementar);
 	display: flex;
 }
 
@@ -36,8 +47,8 @@ header {
 }
 
 header #logo {
-	background: #8AA98A;
-	color: white;
+	background: var(--verde-complementar);
+	color: var(--font-color-texto);
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 20px;
@@ -70,7 +81,7 @@ nav {
 	flex: 1 1 100%;
 	justify-content: center;
 	align-items: center;
-	color: #fff;
+	color: var(--font-color-texto);
 }
 
 nav a {
@@ -83,7 +94,7 @@ nav a {
 main {
 	flex: 20 1 500px;
 	text-align: center;
-	color: #253529;
+	color: var(--font-color-titulo);
 	
 }
 
@@ -95,7 +106,7 @@ h2{
 
 p{
 	padding: 15px;
-	color: #fff;
+	color: var(--font-color-texto);
 	font-size: 22px;
 }
 
@@ -104,6 +115,7 @@ p{
 aside {
 	flex: 1 1 200px;
 }
+
 
 #galery > div{
 	width: 100%;
@@ -114,7 +126,7 @@ aside {
 .foto img{
 	width: 100%;
 	display: block;
-	border: solid 5px #fff ;
+	border: solid 5px var(--branco-secundário) ;
 }
 
 .descricao{
@@ -130,13 +142,13 @@ aside {
 	border: solid 1px #333;
 	border-radius: 5px;
 	box-shadow: 0 0 25px 10px #000;
-	background-color: #8AA98A;
+	background-color: var(--verde-complementar);
 }
 
 .foto:target .descricao{
 	display: block;
 	text-align: center;
-	color: #E4E6D9;
+	color: var(--font-color-texto);
 }
 
 
@@ -146,7 +158,7 @@ article {
 	display: flex;
 	justify-content: center;
 	text-align: center;
-	color: #253529;
+	color: var(--font-color-titulo);
 	text-transform: uppercase;
 	font-size: 25px;
 }
@@ -155,7 +167,7 @@ article {
 
 /* Configurações Gerais para parte do Footer/Rodapé */
 footer {
-	background-color: #253529;
+	background-color: var(--background-footer);
 	flex: 1 1 100vw;
 	flex-direction: column;
 	margin-top: 0.5%;
@@ -224,7 +236,7 @@ footer {
 
 .Bottom-footer {
 	padding: 20px;
-	background-color: #253529;
+	background-color: var(--background-footer);
 	text-align: center;
 }
 
